--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Vue Hello</title>
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="div_position">
+        <h1 :class="myClass[3]">{{title}}</h1>
+        <div>
+            <button :class="myClass[2]" @click="showImg">SHOW</button>
+        </div>
+        <img :class="myClass[0]" :src="imgs[0]">
+       <p :class="myClass[3]">{{message}}</p>
         
-
     </div>
     
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
